# ai_code

./: .gitignore  README.md  agent.py  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: chuck.py  deps_analyzer.py  diff.py  file_utils.py  language_converter.py  openai_client.py  refactor_engine.py
tests/: conftest.py  test_agent.py  test_chuck.py  test_cli.py  test_deps_analyzer.py  test_diff.py  test_file_utils.py  test_language_converter.py  test_openai_client.py  test_refactor_engine.py
