[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code"
version = "0.1.0"
description = "AI-powered code analysis, refactoring, and language conversion CLI tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
